# microservice

./: Dockerfile  README.md  docker-compose.yml  fibonacci.py  first.sh  pyproject.toml  scripts.txt  second.sh  service.sh
common/: __init__.py  fibo.py  logging.py  otel.py  zookeeper.py
first/: service.py
first/app/: __init__.py
first/blueprint/: __init__.py  endpoints.py
first/service/: second.py
second/: service.py
second/app/: __init__.py
second/blueprint/: endpoints.py
second/service/: httpbin.py
tables/001-logs/: logs_schema.json  logs_table.json
volumes/otel-collector/: config.yaml
